# test-repo

./: .env.example  .gitignore  ALIGNMENT.md  DISCLAIMER.md  GOVERNANCE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
config/: entity.example.yaml
entity/action/: dispatcher.py
entity/action/comms/: __init__.py  farcaster_poster.py  x_poster.py
entity/action/treasury/: __init__.py  tracker.py
entity/action/voice/: __init__.py  formatter.py  shilling_filter.py
entity/api/: discovery.py  server.py  x402.py
entity/api/endpoints/: intel.py  scan.py  simulate.py
entity/cognition/: __init__.py  reasoner.py  types.py
entity/perception/: __init__.py  types.py
entity/runtime/: demo_day4.py  demo_offline.py  main.py  reasoner_factory.py
entity/safety/: __init__.py  core_verifier.py  drift_detector.py  guardrail.py  killswitch.py  rate_limiter.py
prompts/immutable_core/: core_v1_en.md
prompts/operational/: layer2_v1_en.md
tests/: test_action_dispatcher.py  test_action_shilling_filter.py  test_action_treasury_tracker.py  test_action_voice_formatter.py  test_action_x_poster.py  test_aggregator.py  test_api_x402.py  test_chain_triage.py  test_cognition_classifier.py  test_cognition_memory.py  test_cognition_prompts.py  test_cognition_reasoner.py  test_cognition_router.py  test_mempool_triage.py  test_runtime_demo.py  test_safety_core_verifier.py  test_safety_drift_detector.py  test_safety_guardrail.py  test_safety_killswitch.py  test_safety_rate_limiter.py
tests/adversarial/: prompts.py  test_canary_trio.py  test_safety_stack.py
(+23 files in other folders)
