[project]
name = "entity"
version = "0.1.0"
description = "The Good Entity — autonomous defensive AI agent"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI idiom — Depends() in default arg position is intended.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
